--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@better-scroll/core": "^2.4.2",
     "axios": "^0.26.0",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
