--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.26.0",
     "better-scroll": "^2.4.2",
     "core-js": "^3.6.5",
+    "http-proxy-middleware": "^2.0.3",
     "vue": "^2.6.11",
     "vue-lazyload": "^1.3.3",
     "vue-router": "^3.5.3",
